--- a/index.html
+++ b/index.html
@@ -10,6 +10,11 @@
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>FifthElement</title>
+    <link
+      rel="icon"
+      sizes="150x51"
+      href="https://github-production-user-asset-6210df.s3.amazonaws.com/45374596/264663257-d2457ad0-343b-46c3-9672-123f566fe778.png"
+    />
   </head>
   <body>
     <div id="root"></div>
