--- a/index.html
+++ b/index.html
@@ -12,8 +12,9 @@
     <title>FifthElement</title>
     <link
       rel="icon"
-      sizes="150x51"
-      href="https://github-production-user-asset-6210df.s3.amazonaws.com/45374596/264663257-d2457ad0-343b-46c3-9672-123f566fe778.png"
+      sizes="32x32"
+      type="image/png"
+      href="https://github.com/leonbjorklund/ScrumProjectGroup2/assets/114247302/d4f1b127-80f9-4f16-8ce7-40ff6972bd7d"
     />
   </head>
   <body>
