Added updated favicon

--- a/index.html
+++ b/index.html
@@ -10,12 +10,7 @@
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>FifthElement</title>
-    <link
-      rel="icon"
-      sizes="32x32"
-      type="image/png"
-      href="https://github.com/leonbjorklund/ScrumProjectGroup2/assets/114247302/d4f1b127-80f9-4f16-8ce7-40ff6972bd7d"
-    />
+    <link rel="icon" href="./src/assets/icons/FE.ico" type="image/x-icon" />
   </head>
   <body>
     <div id="root"></div>
